# portfolio

./: README.md  eslint.config.js  fluid-simulation.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  server.js
src/: App.tsx  entry-client.tsx  entry-server.tsx  index.css  main.tsx  types.ts
src/components/: ExperienceList.tsx  Me.tsx  Projects.tsx  SectionBreakLine.tsx
src/components/fluid-simulation/: FluidSimulation.tsx  HelperMenu.tsx  fluid.ts  grid.ts  scene.ts
src/data/: index.ts  projects.ts  schoolExperience.ts  workExperience.ts
src/fluid-simulation/: draw-scene.ts  init-buffer.ts  main.js  main.ts  types.ts
src/hooks/: useIsVisibleCallback.ts
src/lib/: SkillIcon.tsx  cn.ts  icons.tsx
src/lib/icons/: Angular.tsx  ArrowAngularTopRight.tsx  Auth0.tsx  Azure.tsx  Bash.tsx  C.tsx  CSS.tsx  CSharp.tsx  Cargo.tsx  Docker.tsx  DotNet.tsx  Envelope.tsx  EnvelopePath.tsx  FastApi.tsx  Firebase.tsx  GCP.tsx  Github.tsx  GithubPath.tsx  GoogleMaps.tsx  Htmx.tsx  Java.tsx  JavaScript.tsx  Linkedin.tsx  LinkedinPath.tsx  MapMarker.tsx  NextJs.tsx  Numpy.tsx  Pandas.tsx  PowerShell.tsx  Python.tsx  Raspberrypi.tsx  React.tsx  Rust.tsx  Supebase.tsx  TailwindCss.tsx  TypeScript.tsx  Up.tsx  Zod.tsx  index.tsx
wasm/: Cargo.toml
wasm/pkg/: package.json  wasm.d.ts  wasm_bg.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
wasm/src/: fluid.rs  grid.rs  lib.rs  scene.rs  util.rs
