[package]
name = "wasm"
version = "0.1.0"
edition = "2024"
authors = ["mingli202 <vincentmingli@gmail.com>"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.105"

[dependencies.web-sys]
features = [
	'CanvasRenderingContext2d',
	'Document',
	'Element',
	'HtmlCanvasElement',
	'Window',
	'EventTarget',
	'PointerEvent',
	'HtmlElement',
	'EventListener',
]
version = "0.3.82"
